// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`sleep target should sleep and not be able to attack 1`] = `
"*Игрок 1* заклинанием _Усыпление_ заставил *Игрок 2* усыпляет игрока
\\[ 📖20 ]
*Игрок 2* пытался атаковать *Игрок 1*, но у него не получилось
_Усыпление_ *Игрок 1*
*Игрок 2* пытался использовать _Защита_ на *Игрок 1*, но у него не получилось
_Усыпление_ *Игрок 1*
*Игрок 2* пытался использовать _Лечение руками_ на *Игрок 2*, но у него не получилось
_Усыпление_ *Игрок 1*
*Игрок 2* пытался использовать _👹 Берсерк_ на *Игрок 2*, но у него не получилось
_Усыпление_ *Игрок 1*"
`;

exports[`sleep should handle several casters 1`] = `
"*Игрок 1* заклинанием _Усыпление_ заставил *Игрок 2* усыпляет игрока
\\[ 📖20 ]
*Игрок 3* заклинанием _Усыпление_ заставил *Игрок 2* усыпляет игрока
\\[ 📖20 ]
*Игрок 2* пытался атаковать *Игрок 1*, но у него не получилось
_Усыпление_ *Игрок 1*
_Усыпление_ *Игрок 3*
*Игрок 2* пытался использовать _Защита_ на *Игрок 1*, но у него не получилось
_Усыпление_ *Игрок 1*
_Усыпление_ *Игрок 3*
*Игрок 2* пытался использовать _Лечение руками_ на *Игрок 2*, но у него не получилось
_Усыпление_ *Игрок 1*
_Усыпление_ *Игрок 3*
*Игрок 2* пытался использовать _👹 Берсерк_ на *Игрок 2*, но у него не получилось
_Усыпление_ *Игрок 1*
_Усыпление_ *Игрок 3*"
`;
